# esp-scd30

./: Cargo.toml
.cargo/: config.toml
py/: crc_table.py  test.py  udp-client.py  udp-server.py
src/: interrupts.rs  machines.rs  main.rs  pac_utils.rs  qq_alarm_queue.rs  ring_buffer.rs  rmt_tx.rs  sdc.rs  sony_ir.rs  usb_writer.rs
src/machines/: controller.rs  debug_print.rs  ir_nec_rx.rs  sdc_simple_measurment.rs  status_led.rs
src/old/: i2c_sync_test.txt  main-1.rs  main-2.rs  main-3.rs  main-async-1.rs  scd_debug_a.txt  usb_writer.rs
src/pac_utils/: i2c.rs  rmt.rs
src/sdc/: machines.rs
src/sony_ir/: rx.rs  tx.rs
txt/: async.txt  rmt.txt  scd30.txt  system.txt  todo.txt  wifi.txt
txt/old/: i2c.txt  usb.txt
