[package]
name = "rust-esp"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.dev.package.esp-wifi]
opt-level = 3

[dependencies]
esp-hal = { version = "0.19.0", features = ["esp32c6"] }
esp-backtrace = { version = "0.13.0", features = ["esp32c6", "panic-handler", "exception-handler", "println"] }
# needed for esp-backtrace because we want to select "jtag-serial" feature
# shouldn't be used in this directly crate
esp-println = { version = "0.10.0", default-features = false, features = ["esp32c6", "jtag-serial"] }

embedded-hal = "1.0.0"
critical-section = "1.1.2"

fugit = "0.3.7"
bitflags = "2.5.0"

esp-wifi = { version = "0.7.1", features = [
    "esp32c6",
    "wifi-default",
    "utils",
    "phy-enable-usb",
]}
# esp-wifi = { path = "../esp-wifi/esp-wifi", features = [
#     "esp32c6",
#     "wifi-default",
#     "utils",
#     "phy-enable-usb",
# ]}
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
]}
heapless = { version = "0.8.0", default-features = false }
